# L2-Projet

./: .gitignore  CMakeLists.txt  Makefile  autosave  board4_5.sol  exemple1.txt  exemple2.txt  game.c  game_amir.c  game_athman.c  game_display.c  game_io.c  game_jordan.c  game_jordan.h  game_lib.c  game_lib_v2.c  game_test.c  install.sh  launch.sh  rendu tests coverage.odt  script.sh  solver.c  solver_jojo.c  test.c  todo.txt  undead_sdl  undead_solve.c  undead_text  undead_text.c
V1/V1 test/: Makefile  test.c  undead_text.c
V1/git/: Makefile  soluce.txt
a_test/: Makefile  a_test.c
docs/: Doxyfile  README
docs/html/: annotated.html  classes.html  dir_1ec98ce50fa6ec55b40b8ffb1df38c3c.html  dir_2c1ec4cfaf5ed43ec260b4f91f837847.html  dir_4e3a4ab5679cca547a78e653ca567e39.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_71a8f06040aef6adfb1e1dfba191bda3.html  dir_815f20267c4210920db059b8dc9603cf.html  dir_a41afb44cd77021f04ef0298981be91e.html  dir_a573004c1aa1ac4f8bc48460229ea7de.html  dir_f41ad69b99f4b35dba6535fe3322af8d.html  dir_fd09212f84d1f309912c007fcfc9baaf.html  files.html  game_8h.html  game_8h__dep__incl.dot  game_8h__dep__incl.md5  game_8h__incl.dot  game_8h__incl.md5  game_8h_source.html  game__display_8h.html  game__display_8h__incl.dot  game__display_8h__incl.md5  game__display_8h_source.html  game__fun_8h.html  game__fun_8h_source.html  game__io_8h.html  game__io_8h__dep__incl.dot  game__io_8h__dep__incl.md5  game__io_8h__incl.dot  game__io_8h__incl.md5  game__io_8h_source.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  graph_legend.html  header_2model_8h_source.html  index.html  (+14 more)
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  enums_1.js  enums_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js
executable/: undead_sdl  undead_solve  undead_text
executable/saves/: autosave  board4_5.txt  board8_7.txt  exemple2.txt  game0.sol
header/: game.h  game_display.h  game_fun.h  game_fun.h.gch
src/: SDL.c  game.c  game_content_converter.c  game_display.c  game_generation.c  game_io.c  game_io_util.c  game_sdl.c  game_solver_lib.c  game_solver_opti.c  game_util.c  main_sdl.c  main_solver.c  model.c  report.xml  solver_lib.c.old  test.c  undead_generation.c  undead_jojo.c  undead_sdl.c  undead_sdl_amir.c  undead_sdl_jojo.c  undead_solve.c  undead_solve.c.old  undead_solve.c.old.old  undead_solve_sdl.c  undead_text.c
src/sdl2-demo/: demo.c  model.c
tmp_save_src/: README.html  sdl  solver_lib.c.old
util/: README.html  README.md
